force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Low_Flow_Gauge_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_Flow_Gauge_Type__c</fullName>
    <label>Low Flow Gauge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well Installed To Protect Flow Requirements</fullName>
            </value>
            <value>
                <fullName>Weir Method</fullName>
            </value>
            <value>
                <fullName>Weir Method &amp; Staff Gauge</fullName>
            </value>
            <value>
                <fullName>USGS Stream Gauge</fullName>
            </value>
            <value>
                <fullName>Riser Method</fullName>
            </value>
            <value>
                <fullName>Recirculating Pump</fullName>
            </value>
            <value>
                <fullName>Pond Outflow Spillway &amp; Staff Gauge</fullName>
            </value>
            <value>
                <fullName>Cross-Sectional Area Method &amp; Flow Meter</fullName>
            </value>
            <value>
                <fullName>Float Switch On Pump</fullName>
            </value>
            <value>
                <fullName>Cross-Sectional Area Method &amp; Staff Gauge</fullName>
            </value>
            <value>
                <fullName>Controlled Flow Through Culvert Pipe</fullName>
            </value>
            <value>
                <fullName>Pond Outflow Spillway</fullName>
            </value>
            <value>
                <fullName>Staff Gauge</fullName>
            </value>
            <value>
                <fullName>Cross-Sectional Area Method</fullName>
            </value>
            <value>
                <fullName>Flow Meter</fullName>
            </value>
            <value>
                <fullName>well installed to supplement stream flow</fullName>
            </value>
            <value>
                <fullName>Blairsville Water Plant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>