force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Installed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Installed__c</fullName>
    <label>Meter Installed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>