force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Location__c</fullName>
    <label>Meter Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pivot Point</fullName>
            </value>
            <value>
                <fullName>GW Source</fullName>
            </value>
            <value>
                <fullName>SW Source</fullName>
            </value>
            <value>
                <fullName>Alt. Leg</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>