force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Location_GPS__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Location_GPS__c</fullName>
    <label>Meter Location GPS</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>