force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Location_Long_X__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Location_Long_X__c</fullName>
    <label>Meter Location: (Long) X</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>