force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Location_Long_Y__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Location_Long_Y__c</fullName>
    <label>Meter Location: (Long) Y</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>