force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Make__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Make</label>
    <referenceTo>AVO_Meter_Codeset__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>