force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Model__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Model</label>
    <referenceTo>AVO_Meter_Codeset__c</referenceTo>
    <relationshipLabel>Inspections (Meter Model)</relationshipLabel>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>