force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Reading_With_Leading_Zeroes__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Reading_With_Leading_Zeroes__c</fullName>
    <label>Meter Reading (With Leading Zeroes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>