force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Meter_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Serial_Number__c</fullName>
    <label>Meter Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>