force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Mobile__c.field-meta.xml
<CustomField>
    <fullName>AVO_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>