force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections6</relationshipName>
    <type>Lookup</type>
</CustomField>