force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_MOSID_Formula__c.field-meta.xml
<CustomField>
    <fullName>AVO_MOSID_Formula__c</fullName>
    <formula>AVO_Meter_Transaction__r.AVO_MOSID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOSID</label>
    <type>Text</type>
</CustomField>