force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Number_of_Photos__c.field-meta.xml
<CustomField>
    <fullName>AVO_Number_of_Photos__c</fullName>
    <label>Number of Photos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>