force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_On_Site_Observations__c.field-meta.xml
<CustomField>
    <fullName>AVO_On_Site_Observations__c</fullName>
    <label>On-Site Observations</label>
    <type>TextArea</type>
</CustomField>