force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Orientation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horiontal</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Diagonal Z</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>