force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Others_present_during_the_inspection__c.field-meta.xml
<CustomField>
    <fullName>AVO_Others_present_during_the_inspection__c</fullName>
    <label>Others present during the inspection</label>
    <type>TextArea</type>
</CustomField>