force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Outside_Diameter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Outside_Diameter__c</fullName>
    <label>Outside Diameter of Metered Pipe (Inches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>