force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Permit_LOC_Onsite__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_LOC_Onsite__c</fullName>
    <label>Permit / LOC Onsite?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>