force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit Number</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Inspections (Permit Number)</relationshipLabel>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>