force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Pipe_Length_downstream_0_200__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pipe_Length_downstream_0_200__c</fullName>
    <label>Pipe Length downstream (0-200)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>