force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Pipe_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pipe_Type__c</fullName>
    <label>Pipe Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Galvanized</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Rubber</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>