force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Processed_Date__c</fullName>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>