force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Pump_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_ID__c</fullName>
    <label>Pump ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>