force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Pump_Well_Power_Source__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_Well_Power_Source__c</fullName>
    <label>Pump/Well Power Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>