force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Purpose_of_Water_Use__c.field-meta.xml
<CustomField>
    <fullName>AVO_Purpose_of_Water_Use__c</fullName>
    <label>Purpose of Water Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Comm. Fish Prod</fullName>
            </value>
            <value>
                <fullName>Pond Refill</fullName>
            </value>
            <value>
                <fullName>Golf Course</fullName>
            </value>
            <value>
                <fullName>Athl Field</fullName>
            </value>
            <value>
                <fullName>Irrigation Golf Course</fullName>
            </value>
            <value>
                <fullName>Irrigation Athletic Field</fullName>
            </value>
            <value>
                <fullName>Freeze/Frost Protection</fullName>
            </value>
            <value>
                <fullName>Livestock/Poultry Watering</fullName>
            </value>
            <value>
                <fullName>Irrigation (Row Crops, Vegetables, Sod Production, Orchards, Plants Nurseries, Pasture)</fullName>
            </value>
            <value>
                <fullName>Other Agricultural Use</fullName>
            </value>
            <value>
                <fullName>Aquaculture</fullName>
            </value>
            <value>
                <fullName>Recreation Pond</fullName>
            </value>
            <value>
                <fullName>Golf Courses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>