force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Rainfall_Shut_Off_Switch__c.field-meta.xml
<CustomField>
    <fullName>AVO_Rainfall_Shut_Off_Switch__c</fullName>
    <label>Rainfall Shut-Off Switch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>