force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Request_Date__c</fullName>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>