force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>