force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Comp_Ref_Types</valueSetName>
    </valueSet>
</CustomField>