force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>