force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Screened_interval_s_If_present__c.field-meta.xml
<CustomField>
    <fullName>AVO_Screened_interval_s_If_present__c</fullName>
    <label>Screened interval(s) (If present)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>