force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Signature_of_EPD_Representative__c.field-meta.xml
<CustomField>
    <fullName>AVO_Signature_of_EPD_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature of EPD Representative</label>
    <type>Checkbox</type>
</CustomField>