force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_signature_of_owner_representative__c.field-meta.xml
<CustomField>
    <fullName>AVO_signature_of_owner_representative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature of owner representative</label>
    <type>Checkbox</type>
</CustomField>