force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Site_Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>AVO_Site_Visit_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit Report</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Additional Information</relationshipLabel>
    <relationshipName>AdditionalInformation</relationshipName>
    <type>Lookup</type>
</CustomField>