force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Site_Visit_Request__c.field-meta.xml
<CustomField>
    <fullName>AVO_Site_Visit_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit Request</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Site Visit Reports</relationshipLabel>
    <relationshipName>SiteVisitReports</relationshipName>
    <type>Lookup</type>
</CustomField>