force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Site_Visit_Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>AVO_Site_Visit_Sub_Class__c</fullName>
    <label>Site Visit Sub-Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>AVO_Site_Visit_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow Meter Approval Needed</fullName>
            </value>
            <value>
                <fullName>New Meter Installation Assessment</fullName>
            </value>
            <value>
                <fullName>Meter R&amp;R Assessment</fullName>
            </value>
            <value>
                <fullName>Verify Meter Site Installation</fullName>
            </value>
            <value>
                <fullName>Verify Meter XY &amp; Serial Number</fullName>
            </value>
            <value>
                <fullName>Verify Owner Installed Meter</fullName>
            </value>
            <value>
                <fullName>Permit Audit</fullName>
            </value>
            <value>
                <fullName>Verify Source XY</fullName>
            </value>
            <value>
                <fullName>Permit Well Construction Inspection</fullName>
            </value>
            <value>
                <fullName>Well Plugged and Abandoned Inspection</fullName>
            </value>
            <value>
                <fullName>1 Year - Owner Must Install Meter Notice</fullName>
            </value>
            <value>
                <fullName>5 Year - Unmeterable Permitted Withdrawals Notice</fullName>
            </value>
            <value>
                <fullName>Expired Letter of Concurrence</fullName>
            </value>
            <value>
                <fullName>Flow Meter Approval Form Not Submitted</fullName>
            </value>
            <value>
                <fullName>Groundwater Pumping Over Permitted GPM Capacity</fullName>
            </value>
            <value>
                <fullName>Improper Plugging and Abandonment of Well Permit</fullName>
            </value>
            <value>
                <fullName>Incomplete Meter Installation</fullName>
            </value>
            <value>
                <fullName>Irrigating Acres Over Permit Capacity</fullName>
            </value>
            <value>
                <fullName>Irrigation Efficiency Certification Not Submitted</fullName>
            </value>
            <value>
                <fullName>Irrigation Efficiency Certification Requirement Violation</fullName>
            </value>
            <value>
                <fullName>Irrigation Water Conservation Plan Not Submitted</fullName>
            </value>
            <value>
                <fullName>Irrigation Water Conservation Plan Violation</fullName>
            </value>
            <value>
                <fullName>Low Flow Protection Plan Not Submitted</fullName>
            </value>
            <value>
                <fullName>Low Flow Protection Plan Violation</fullName>
            </value>
            <value>
                <fullName>Meter Tampering</fullName>
            </value>
            <value>
                <fullName>New Permit NOV</fullName>
            </value>
            <value>
                <fullName>Pump Completion Data Form Not Submitted</fullName>
            </value>
            <value>
                <fullName>Surface Water Pumping Over Permitted GPM Capacity</fullName>
            </value>
            <value>
                <fullName>Undocumented Acres</fullName>
            </value>
            <value>
                <fullName>Undocumented Groundwater Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>