force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Solid_casing_depth_interval_s__c.field-meta.xml
<CustomField>
    <fullName>AVO_Solid_casing_depth_interval_s__c</fullName>
    <label>Solid casing depth interval(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>