force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well Ground Water</fullName>
            </value>
            <value>
                <fullName>Pump-Surface Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>