force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Source_Y__c.field-meta.xml
<CustomField>
    <fullName>AVO_Source_Y__c</fullName>
    <label>Source Y</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>