force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Telemetry_Unit__c.field-meta.xml
<CustomField>
    <fullName>AVO_Telemetry_Unit__c</fullName>
    <label>Telemetry Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>