force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Telemetry_Unit_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Telemetry_Unit_Serial_Number__c</fullName>
    <label>Telemetry Unit Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>