force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Telephone__c.field-meta.xml
<CustomField>
    <fullName>AVO_Telephone__c</fullName>
    <label>Telephone</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>