force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Time_inspection_ended__c.field-meta.xml
<CustomField>
    <fullName>AVO_Time_inspection_ended__c</fullName>
    <label>Time inspection ended</label>
    <type>Time</type>
</CustomField>