force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Time_inspection_started__c.field-meta.xml
<CustomField>
    <fullName>AVO_Time_inspection_started__c</fullName>
    <label>Time inspection started</label>
    <type>Time</type>
</CustomField>