force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_To_Pond__c.field-meta.xml
<CustomField>
    <fullName>AVO_To_Pond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Pond</label>
    <type>Checkbox</type>
</CustomField>