force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Tool_s_utilized_during_inspection__c.field-meta.xml
<CustomField>
    <fullName>AVO_Tool_s_utilized_during_inspection__c</fullName>
    <label>Tool(s) utilized during inspection</label>
    <type>TextArea</type>
</CustomField>