force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Total_depth__c.field-meta.xml
<CustomField>
    <fullName>AVO_Total_depth__c</fullName>
    <label>Total depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>