force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Transfer_Pump__c.field-meta.xml
<CustomField>
    <fullName>AVO_Transfer_Pump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Pump</label>
    <type>Checkbox</type>
</CustomField>